Added user registration

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -9,7 +9,7 @@
   
   = javascript_include_tag 'support/jquery.wysiwyg'
 
-h1 Chipotle
+h1 = @company.name
 #builder-container
   #builder
     #emulator-wrapper
