--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -6,7 +6,7 @@
       .title {{ prettyName }}
   
   script.mapp-header(type="text/template")
-    .logo{ style="background-image: url(/sample-data/{{ name }}/logo.png)" }
+    .logo{ style="background-image: url(http://s3.amazonaws.com/yomobi/logos/{{ name }}_mobile)" }
     .name {{ prettyName }}
     .clearfix
   
