--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -1,3 +1,71 @@
+#header {
+  padding-top: 10px;
+  background: #3b5998;
+  color: white;
+  height: 31px; }
+  #header .content {
+    width: 960px;
+    margin: 0 auto; }
+  #header #logo {
+    float: left;
+    width: 188px;
+    padding-left: 12px;
+    font-size: 2em; }
+  #header #nav {
+    float: left;
+    width: 750px;
+    height: 30px;
+    border: 1px solid #1d4088;
+    border-bottom: none;
+    background: #627aad;
+    text-align: right; }
+    #header #nav a, #header #nav a:visited {
+      float: right;
+      height: 23px;
+      padding: 7px 10px 0;
+      color: white;
+      font-weight: bold;
+      text-decoration: none; }
+    #header #nav a:hover {
+      background-color: #6d86b7; }
+
+#sidebar {
+  float: left;
+  width: 200px; }
+  #sidebar ul {
+    list-style: none;
+    padding-left: 0;
+    margin-top: 54px; }
+  #sidebar .option {
+    height: 16px;
+    padding: 3px 0 2px 4px;
+    clear: left; }
+    #sidebar .option .icon {
+      float: left;
+      width: 16px;
+      height: 16px;
+      margin-right: 4px;
+      background: url(/images/test-icons.png); }
+    #sidebar .option:hover {
+      background-color: #d8dfea;
+      cursor: pointer; }
+  #sidebar .option.basic .icon {
+    background-position: 0 0; }
+  #sidebar .option.config .icon {
+    background-position: 0 -16px; }
+  #sidebar .option.builder .icon {
+    background-position: 0 -32px; }
+  #sidebar .option.active {
+    background-color: #d8dfea; }
+
+#content {
+  float: left;
+  border: 1px solid #b3b3b3;
+  border-top: none;
+  width: 758px; }
+  #content h1 {
+    padding-left: 10px; }
+
 .ad-bar {
   display: none !important; }
 
