--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -6,71 +6,17 @@ body
   font-size: 11px
   overflow-y: scroll
 
-p.notice, p.alert
-  text-align: center
-  font-size: 16px
+#topline-notice
+  p.notice, p.alert, p.error
+    text-align: center
+    font-size: 16px
+
+p.error
+  color: #F03D25
 
 #page-container
   width: $page-width
   margin: 0 auto
-
-#header
-  padding-top: 10px
-  background: $main-color
-  color: $header-font-color
-  height: 31px
-  .content
-    width: $page-width
-    margin: 0 auto
-  #logo
-    float: left
-    width: $sidebar-width - 12px
-    padding-left: 12px
-    font-size: 2em
-  #nav
-    float: left
-    width: $content-width - 2
-    height: 30px
-    border: 1px solid #1D4088
-    border-bottom: none
-    background: $secondary-color
-
-#sidebar
-  float: left
-  width: $sidebar-width
-  ul
-    list-style: none
-    padding-left: 0
-    margin-top: 54px
-  .option
-    height: 16px
-    padding: 3px 0 2px 4px
-    clear: left
-    .icon
-      float: left
-      width: 16px
-      height: 16px
-      margin-right: 4px
-      background: url(/images/test-icons.png)
-    &:hover
-      background-color: $highlight-color
-      cursor: pointer
-  .option.basic .icon
-    background-position: 0 0
-  .option.config .icon
-    background-position: 0 -16px
-  .option.builder .icon
-    background-position: 0 -32px
-  .option.active
-    background-color: $highlight-color
-
-#content
-  float: left
-  border: 1px solid #B3B3B3
-  border-top: none
-  width: $content-width - 2px
-  h1
-    padding-left: 10px
 
 .main-btn
   background: #5B74A8
@@ -79,11 +25,14 @@ p.notice, p.alert
   &:hover
     cursor: pointer
   .content
+    background: #5B74A8
     padding: 2px 6px 3px
+    margin: 0
     border: 1px solid #5B74A8
     border-top-color: #8A9CC2
     color: #fff
     font-weight: bold
+    cursor: pointer
   .content:active
     background: #4F6AA3
     border-color: #4F6AA3
@@ -116,3 +65,9 @@ p.notice, p.alert
   @extend .home-icon
   padding: 10px 8px
   border: 1px dashed #000
+
+.lfloat
+  float: left
+
+.rfloat
+  float: right
