--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -16,17 +16,18 @@ html
       #header
         .content
           #logo YoMobi
-          = form_tag session_path(:user) do |f|
-            = label_tag :email
-            = text_field_tag 'user[email]', ''
+          - if current_user.nil?
+            = form_tag session_path(:user) do |f|
+              = label_tag :email
+              = text_field_tag 'user[email]', ''
 
-            = label_tag :password
-            = password_field_tag 'user[password]', ''
+              = label_tag :password
+              = password_field_tag 'user[password]', ''
 
-            = check_box_tag 'user[remember_me]'
-            = label_tag :remember_me
+              = check_box_tag 'user[remember_me]'
+              = label_tag :remember_me
 
-            = submit_tag "Sign in"
+              = submit_tag "Sign in"
           .clearfix
       #page-container
         #sidebar
