Added 'forgot password?' link

--- a/public/stylesheets/sass/signup.sass
+++ b/public/stylesheets/sass/signup.sass
@@ -7,6 +7,12 @@
   background: $main-color
   color: $header-font-color
   height: 31px
+  a, a:visited
+    color: #98A9CA
+  a
+    text-decoration: none
+  a:hover
+    text-decoration: underline
   .content
     width: $page-width
     margin: 0 auto
