--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -28,6 +28,7 @@ html
               = label_tag :remember_me
 
               = submit_tag "Sign in"
+            = link_to "Forgot your password?", new_password_path(:user)
           .clearfix
       #page-container
         #sidebar
