Added opting out, fixed some bugs in follower.rb

--- a/app/views/user_mailer/email_follower.html.erb
+++ b/app/views/user_mailer/email_follower.html.erb
@@ -1,1 +1,5 @@
 <%= @params[:content] %>
+
+You are receiving this email because you opted to receive emails from <%= @params[:company].name %> through their mobile site.
+
+To opt out of further emails from this company, visit <%= @params[:follower].short_url %>
