Notices now disappear after 2.5 seconds, while alerts do not. Also made notice look a bit nicer.

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -36,3 +36,6 @@ html
         #content
           = yield
         .clearfix
+    
+    = javascript_include_tag 'http://code.jquery.com/jquery-1.5.1.js'
+    = javascript_include_tag 'notice'
