--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -7,10 +7,11 @@ html
     = stylesheet_link_tag 'jquery.wysiwyg'
     = csrf_meta_tag
   body
-    - if notice
-      p.notice = notice
-    - if alert
-      p.alert = alert
+    #topline-notice
+      - if notice
+        p.notice = notice
+      - if alert
+        p.alert = alert
     
     #global-container
       #header
@@ -56,3 +57,5 @@ html
       = javascript_include_tag "widgets/builder/#{File.basename widget}"
     
     = yield :js
+
+    = javascript_include_tag 'notice'
