--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -2,14 +2,25 @@
 @import dbx.css
 
 body
+  margin: 0
+  padding: 0
   font-family: 'lucida grande', tahoma, verdana, arial, sans-serif
   font-size: 11px
   overflow-y: scroll
 
 #topline-notice
+  background: $highlight-color
+  text-align: center
+  -webkit-box-shadow: #9C9C9C 0 1px 15px
+  -moz-box-shadow: 0 1px 15px #9C9C9C
+  border-bottom: 1px solid #1D4088
   p.notice, p.alert, p.error
+    margin: 0
     text-align: center
-    font-size: 16px
+    font-size: 20px
+    line-height: 20px
+    font-weight: bold
+    padding: 10px 0
 
 p.error
   color: #F03D25
