Made the signup form look a little better.

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -79,3 +79,12 @@ p.error {
 
 .rfloat {
   float: right; }
+
+.clearfix {
+  clear: both; }
+
+.lclear {
+  clear: left; }
+
+.rclear {
+  clear: right; }
