--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -17,18 +17,7 @@ html
         .content
           #logo YoMobi
           - if current_user.nil?
-            = form_tag session_path(:user) do |f|
-              = label_tag :email
-              = text_field_tag 'user[email]', ''
-
-              = label_tag :password
-              = password_field_tag 'user[password]', ''
-
-              = check_box_tag 'user[remember_me]'
-              = label_tag :remember_me
-
-              = submit_tag "Sign in"
-            = link_to "Forgot your password?", new_password_path(:user)
+            = render :partial => 'shared/header-signin-form'
           .clearfix
       #page-container
         #sidebar
