--- a/app/views/signup/default/step-1.slim
+++ b/app/views/signup/default/step-1.slim
@@ -1,7 +1,7 @@
-#account-setup-wrapper
-  h1 = "Setup (Step #{@step_num})"
-  
-  = form_tag account_setup_path(1), :id => 'account-setup-box' do
+= render :partial => 'signup-step-arrows', :locals => { :step => 1 }
+
+= form_tag account_setup_path(1), :id => 'account-setup-box', :class => 'center-box' do
+  .content
     h2 Fill out your Website Information
     
     hr
@@ -30,6 +30,7 @@
     - if @errors['desc']
       p.error Description is too long. 2500 characters max.
     textarea name="step_data[desc]" rows="10" = @data['desc']
-    
+  .action-bar
     .rfloat.main-btn
       input.content type="submit" value="Save & Continue"
+    .clearfix
