--- a/app/views/signup/default/step-2.slim
+++ b/app/views/signup/default/step-2.slim
@@ -1,7 +1,7 @@
-#account-setup-wrapper
-  h1 = "Setup (Step #{@step_num})"
-  
-  = form_tag account_setup_path(2), :id => 'account-setup-box' do
+= render :partial => 'signup-step-arrows', :locals => { :step => 2 }
+
+= form_tag account_setup_path(2), :id => 'account-setup-box', :class => 'center-box' do
+  .content
     h2 Please Fill out your Business's Public Information
 
     h3 Your Business Phone
@@ -20,6 +20,7 @@
     input name="step_data[address][state]" type="text"
     label Zip / Postal Code:
     input name="step_data[address][zip]" type="text"
-  
+  .action-bar
     .rfloat.main-btn
       input.content type="submit" value="Save & Continue"
+    .clearfix
