--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -8,6 +8,9 @@ body
   font-size: 11px
   overflow-y: scroll
 
+hr
+  color: #ccc
+
 #topline-notice
   background: $highlight-color
   text-align: center
@@ -28,6 +31,17 @@ p.error
 #page-container
   width: $page-width
   margin: 0 auto
+
+.center-box
+  margin: 20px auto
+  .content
+    padding: 10px 20px
+  border: 1px solid #ccc
+  -webkit-border-radius: 4px
+  .action-bar
+    padding: 10px 12px
+    background: #f2f2f2
+    border-top: 1px solid #ccc
 
 .main-btn
   background: #5B74A8
