--- a/public/stylesheets/sass/signup.sass
+++ b/public/stylesheets/sass/signup.sass
@@ -2,7 +2,7 @@
 
 // layout related
 
-#header
+#header.signed-out
   padding: 14px 0 20px 0
   background: $main-color
   color: $header-font-color
@@ -31,12 +31,7 @@
     .main-btn
       margin-top: 14px
   #nav
-    float: left
-    width: $content-width - 2
-    height: 30px
-    border: 1px solid #1D4088
-    border-bottom: none
-    background: $secondary-color
+    display: none
 
 #sidebar
   float: left
