Added phone image to home page

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -1,6 +1,7 @@
 #banner
   h2 Mobilize Your Site!
   p Connect to the trillions of mobile customers out there
+  img src="/images/ui/home-phone.png"
 
 #signup-box
   h2 Sign Up (it's free)
