Polished signin page

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -16,7 +16,7 @@ html
       #header class=(current_user.nil? ? 'signed-out' : 'signed-in')
         .content
           #logo YoMobi
-          - if current_user.nil?
+          - if current_user.nil? && @hide_header_signin_form != true
             = render :partial => 'shared/header-signin-form'
           = render :partial => 'shared/nav'
           .clearfix
