--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -8,6 +8,13 @@ body
   font-size: 11px
   overflow-y: scroll
 
+a, a:visited
+  color: #3B5998
+  text-decoration: none
+
+a:hover
+  text-decoration: underline
+
 hr
   color: #ccc
 
