--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -6,6 +6,13 @@ body {
   font-size: 11px;
   overflow-y: scroll; }
 
+a, a:visited {
+  color: #3b5998;
+  text-decoration: none; }
+
+a:hover {
+  text-decoration: underline; }
+
 hr {
   color: #cccccc; }
 
