Added booking request widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -60,6 +60,13 @@ bdata = [
   },
 
   {
+    name: "booking-request",
+    wtype: 'booking',
+    helpText: "Let your customers book a request through your Yomobi mobile website.",
+    singleton: true
+  },
+
+  {
     name: "keep-me-informed",
     wtype: 'informed',
     helpText: "This widget allows your customers to opt-in to receive email and sms notifications from you.",
