--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -22,6 +22,9 @@ body
     .content
       padding: 0 4px
       font-size: 16px
+    p.error
+      margin-bottom: 0
+      color: #880000
 
 .back-bar
   width: $dynamic-width - 16px
