--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -19,7 +19,7 @@ html
     
     = javascript_include_tag 'widgets/mobile/base'
     
-    - Dir[widgets_dir('mobile/*.js')].each do |widget|
+    - Dir[widgets_dir('mobile/*.js')].sort.each do |widget|
       - next if File.basename(widget) == 'base.js'
       = javascript_include_tag "widgets/mobile/#{File.basename widget}"
     
