Fixed emailing bug

--- a/app/views/user_mailer/email_follower.html.erb
+++ b/app/views/user_mailer/email_follower.html.erb
@@ -1,5 +1,5 @@
-<%= @params[:content] %>
+<p><%= @params[:content] %></p>
 
-You are receiving this email because you opted to receive emails from <%= @params[:company].name %> through their mobile site.
+<p>You are receiving this email because you opted to receive emails from <%= @params[:company_name] %> through their mobile site.</p>
 
-To opt out of further emails from this company, visit <%= @params[:follower].short_url %>
+<p>To opt out of further emails from this company, visit <a href="<%= @params[:short_url] %>">click here.</a></p>
