Fixed weird firefox ui bug

--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -35,7 +35,7 @@
   float: left
   border: 1px solid #B3B3B3
   border-top: none
-  width: $content-width - 2px
+  width: $content-width - 2px - 1px
   h1
     padding-left: 10px
 
